Fix queue state updates. Smaller album image on mobile.

--- a/client/scss/current.scss
+++ b/client/scss/current.scss
@@ -7,6 +7,10 @@
 
   img {
     max-width: 225px;
+
+    @media screen and (max-width: 1200px) {
+      max-width: 175px;
+    }
   }
 
   div {
